2009-03-18 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix typo in utils.py.

2009-03-18 Francesco Fumanti <francesco.fumanti@gmx.net>

    Syncronize with revision 137 of lp:onboard.

2009-03-17 Chris Jones <chris.e.jones@gmail.com>

    Stop settings dialog from creating its own OnboardGtk instance to fix bug
    where an extra IconPalette would appear when the settings dialog was open.

2009-03-07 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix typo in __init__ of Pane class.

2009-03-02 Francesco Fumanti <francesco.fumanti@gmx.net>

    Add more logging messages and unify logging syntax.

2009-02-27 Francesco Fumanti <francesco.fumanti@gmx.net>

    Restore handling of the in_use gconf key of IconPalette.

2009-02-24 Francesco Fumanti <francesco.fumanti@gmx.net>

    Remove unused variable from the IconPalette module.

2009-02-24 Francesco Fumanti <francesco.fumanti@gmx.net>

    Add docstrings to the IconPalette module.

2009-02-15 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix lintian warning: debhelper-but-no-misc-depends

2009-02-15 Francesco Fumanti <francesco.fumanti@gmx.net>

    Restore resizing of IconPalette with themable resize grip.

2009-02-05 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix two indentation errors.

2009-02-04 Francesco Fumanti <francesco.fumanti@gmx.net>

    Remove unnecessary check.

2009-02-04 Francesco Fumanti <francesco.fumanti@gmx.net>

    Store position and size to gconf only if different from stored values.

2009-02-04 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix regression braking the moving of the floating palette.

2009-02-03 Francesco Fumanti <francesco.fumanti@gmx.net>

    Syncronize with revision 136 of lp:onboard.

2009-01-21 Francesco Fumanti <francesco.fumanti@gmx.net>

    Forgot Changelog entry in previous commit (rev. 139).

2009-01-21 Francesco Fumanti <francesco.fumanti@gmx.net>

    Syncronize with revision 133 of lp:onboard.
